# spa_db_project

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
initspa/: initspa.py
initspa/sql_queries/: create_tables_on_SPA.sql  insert_data_to_SPA.sql
spa/: .env  main.py
spa/connection/: spa_db_check_conn.py  spa_db_close_conn.py  spa_db_connect.py
spa/deco/: spa_db_banner.py
spa/insert_funcs/: insert_new_prod_cat.py  insert_prod_prices.py  insert_products_pv.py  insert_stores_pv.py  remove_prod_cat.py  remove_prod_dt.py  remove_prod_price.py  remove_store_dt.py
spa/others/: uc.py
spa/reglog_funcs/: login.py  registration.py
spa/view_funcs/: compare_prod_price.py  view_all_s_p_pr.py  view_prod_cat.py  view_prod_price.py  view_products.py  view_stores.py
