[tool.poetry]
name = "spa"
version = "0.11"
description = "Store Pricing Analytics"
authors = ["Terence Tahalele <terence.tahalele@gmail.com>"]
packages = [{ include = "spa" }]

[tool.poetry.dependencies]
python = "^3.8"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
environs = "^11.0.0"
bcrypt = "^4.1.3"


[tool.poetry.scripts]
spa = "spa.main:entry_menu"

[build-system]
#requires = [ ]
#build-backend = "poetry.core.masonry.api"
